--- a/earthcircl.es/index.html
+++ b/earthcircl.es/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="refresh" content="8;URL=http://www.beyondthefra.me">
+<meta http-equiv="refresh" content="8;URL=//www.beyondthefra.me">
 <title>EARTHCIRCL.ES is now BEYOND THE FRAME</title>
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:100,400' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
@@ -41,7 +41,7 @@ a, a:hover, a:visited {
 <body>
 
 <h1>EARTHCIRCL.ES is now <span class="stronger">BEYOND THE FRA.ME</span></h1>
-<p>Wait a few seconds or <a href="http://www.beyondthefra.me">click here</a> if not automatically redirected.</p>
+<p>Wait a few seconds or <a href="//www.beyondthefra.me">click here</a> if not automatically redirected.</p>
 
 </body>
 </html>
