--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="Author" content="Beyond the Frame" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
-	
+
 
 <!-- ============= CSS ============ -->
 <link rel='stylesheet' href='css/style.css'  type='text/css'>
@@ -18,21 +18,9 @@
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:100,400' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Raleway:100&text=BEYONDTHRAMbeyondthFfram' rel='stylesheet' type='text/css'>
 
-
-<!-- Bootstrap -->
-<!-- <link rel='stylesheet' href='css/style.css'  type='text/css'> -->
-
 </head>
 
 <body>
-
-<video autoplay loop poster="borderlessBG.jpg" id="bgvid">
-
-	<source src="vid/borderlessBG.ogg" type="video/ogg">
-	<source src="vid/borderlessBG.webm" type="video/webm">
-
-</video>
-
 
 <div class="container"> <!-- Try .container-fluid ??? -->
 
@@ -45,37 +33,23 @@
 </div> <!-- row -->
 
 <div class="row">
-    <section id="navigation col-sm-10 col-sm-offset-2">
-        <nav class="navMenu">
-			<ul class="list-inline">
-		        <li><a href="indev.html">In Development</a></li>
-		        <li><a href="work.html">Narrative &amp; Installations</a></li>
-		        <!-- <li><a href="contact.html">Contact</a></li>-->
-		    </ul>
-	    </nav> 
-
-        <nav>
-        </nav>
-
-        <nav class="socialMenu">
+    <div class="col-sm-10 col-sm-offset-1">
+        <header class="text-center">We distill stories and concepts into awesome experiences </header>
+    </div>
+    <div class="col-sm-10 col-sm-offset-1">
+        <div class="text-center">
 		    <ul class="list-inline">
 		        <li><a href="mailto:schmudde@beyondthefra.me"><i class="fa fa-envelope-square"></i></a></li>
 		        <li><a href="http://beyondthefra.me"><i class="fa fa-home"></i></a></li>
 		        <li><a href="http://twitter.com/dschmudde" target="_blank"><i class="fa fa-twitter"></i></a></li>
 		        <li><a href="http://beyondthefra-me.tumblr.com/" target="_blank"><i class="fa fa-tumblr-square"></i></a></li>
 	        </ul>
-	    </nav>
-    </section>
-</div> <!-- row -->
-
-<div class="row">
-    <div class="col-sm-10 col-sm-offset-2 pageContent">
-        <header class="text-center">We distill stories and concepts into awesome experiences </header>
+        </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col-sm-10 col-sm-offset-2 pageContent">
+    <div class="col-sm-10 col-sm-offset-1 pageContent">
         <h2>We love to collaborate</h2>
             <div class="row">
                 <span class="logo text-center"><img src="img/collab/Bazaar_Harpers.jpg" alt="Harper's Bazaar" /></span>
@@ -101,7 +75,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-10 col-sm-offset-2 pageContent">
+    <div class="col-sm-10 col-sm-offset-1 pageContent">
         <h2>We Love to Share Our Work</h2>
             <div class="row">
                 <span class="logo"><img src="img/distro/atandt.png" alt="AT&T" /></span>
@@ -125,21 +99,13 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript">
 	if (typeof jQuery == 'undefined') {
-    	document.write(unescape("%3Cscript src='js/jquery-2.1.3.min.js' type='text/javascript'%3E%3C/script%3E"));    	
+    	document.write(unescape("%3Cscript src='js/jquery-2.1.3.min.js' type='text/javascript'%3E%3C/script%3E"));
 		console.log ("GoogleAPI Error");
 	}
 </script>
 
 <!-- Bootstrap JS -->
 <script src="js/bootstrap.min.js"></script>
-
-<!-- Fit Vids -->
-<script src="js/jquery.fitvids.js"></script>
-<script>
-    $(document).ready(function() {
-        $(".videoContainer").fitVids();
-    });
-</script>
 
 </body>
 </html>
