--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
-        <header class="text-center">We make awesome experiences </header>
+        <header class="text-center">We turn stories into experiences </header>
     </div>
     <div class="col-sm-10 col-sm-offset-1">
         <div class="text-center">
